syntax = "proto3";

option csharp_namespace = "Shipment.Grpc";

package shipmentmonitor;

// The greeting service definition.
service ShipmentMonitor {
  rpc GetKMToTarget (ShipmentRequest) returns (stream ShipmentReply);
}

// The request message containing the user's name.
message ShipmentRequest {
  sint32 shipmentId = 1;
  sint32 initialKM = 2;	
}

message ShipmentReply {
  sint32 shipmentId = 1;
  sint32 remainingKm = 2;
  string currentLocation = 3;
}
